# ImageViewer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  imgui.ini  main.cpp
GLFW/: libglfw.so.3.4
include/: canvas.h  debug.h  mainMenu.h  renderObject.h
shader/: canvas.frag  canvas.vert
src/: canvas.cpp  debug.cpp  main.cpp  mainMenu.cpp  renderObject.cpp  renderObject.h
static/: example.t  example.tx  example.txt
